# KRATER

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BASE/: settings.ini
BASE/SHADERS/: chunk.frag  chunk.vert  quad.vert  text.frag
DATA/SHADERS/: quad.frag  rect.vert  text.vert
SOURCE/: KRATER.cpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  core.cpp  core.hpp  ebo.cpp  ebo.hpp  events.cpp  events.hpp  marchingCubesTable.hpp  mesh.cpp  mesh.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  util.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  window.cpp  window.hpp  world.cpp  world.hpp  worldRenderer.hpp
