#CMAKE VERSION
CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

#COMPILER SETTINGS
SET(CMAKE_CXX_COMPILER      CLANG)
SET(CMAKE_CXX_STANDARD      17)
SET(CMAKE_BUILD_TYPE        Debug)
SET(CMAKE_CXX_FLAGS_DEBUG   "-g -O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

#PROJECT NAME
SET(PROJECT_NAME KRATER)
PROJECT(${PROJECT_NAME} CXX)

#SOURCE
ADD_EXECUTABLE (${PROJECT_NAME}
                SOURCE/KRATER.cpp
                SOURCE/core.cpp
                SOURCE/mesh.cpp
                SOURCE/shader.cpp
                SOURCE/world.cpp
                SOURCE/camera.cpp
                SOURCE/renderer.cpp
                SOURCE/texture.cpp
                SOURCE/primitives.cpp)

#BINARY DIRECTORY
SET_TARGET_PROPERTIES (${PROJECT_NAME}
                       PROPERTIES RUNTIME_OUTPUT_DIRECTORY
                       ${CMAKE_SOURCE_DIR}/
                       CXX_STANDART 17)

#GLM
ADD_SUBDIRECTORY      (${CMAKE_SOURCE_DIR}/LIBS/glm ${CMAKE_CURRENT_BINARY_DIR}/glm)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PRIVATE glm)

#SPDLOG
ADD_SUBDIRECTORY      (${CMAKE_SOURCE_DIR}/LIBS/spdlog ${CMAKE_CURRENT_BINARY_DIR}/spdlog)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PRIVATE spdlog)

#GLAD
ADD_SUBDIRECTORY      (${CMAKE_SOURCE_DIR}/LIBS/glad ${CMAKE_CURRENT_BINARY_DIR}/glad)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PRIVATE glad)

#GLFW
ADD_SUBDIRECTORY      (${CMAKE_SOURCE_DIR}/LIBS/glfw ${CMAKE_CURRENT_BINARY_DIR}/glfw)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PRIVATE glfw)

#FREETYPE
ADD_SUBDIRECTORY      (${CMAKE_SOURCE_DIR}/LIBS/freetype ${CMAKE_CURRENT_BINARY_DIR}/freetype)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} PRIVATE freetype)

#mINI
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE LIBS/mini/src/)

#STB
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE LIBS/stb/)

#SOURCE
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE SOURCE)